// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numericRefinementList() calls twice ReactDOM.render(<RefinementList props />, container) 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-refinement-list--item__active",
      "body": "ais-refinement-list--body",
      "footer": "ais-refinement-list--footer",
      "header": "ais-refinement-list--header",
      "item": "ais-refinement-list--item",
      "label": "ais-refinement-list--label",
      "list": "ais-refinement-list--list",
      "radio": "ais-refinement-list--radio",
      "root": "ais-refinement-list root cx",
    }
  }
  facetValues={
    Array [
      Object {
        "isRefined": true,
        "label": "All",
        "value": "%7B%7D",
      },
      Object {
        "isRefined": false,
        "label": "less than 4",
        "value": "%7B%22end%22:4%7D",
      },
      Object {
        "isRefined": false,
        "label": "4",
        "value": "%7B%22start%22:4,%22end%22:4%7D",
      },
      Object {
        "isRefined": false,
        "label": "between 5 and 10",
        "value": "%7B%22start%22:5,%22end%22:10%7D",
      },
      Object {
        "isRefined": false,
        "label": "more than 10",
        "value": "%7B%22start%22:10%7D",
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"radio\\" class=\\"{{cssClasses.radio}}\\" name=\\"{{attributeName}}\\" {{#isRefined}}checked{{/isRefined}} />{{label}}
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleRefinement={[Function]}
/>
`;

exports[`numericRefinementList() calls twice ReactDOM.render(<RefinementList props />, container) 2`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-refinement-list--item__active",
      "body": "ais-refinement-list--body",
      "footer": "ais-refinement-list--footer",
      "header": "ais-refinement-list--header",
      "item": "ais-refinement-list--item",
      "label": "ais-refinement-list--label",
      "list": "ais-refinement-list--list",
      "radio": "ais-refinement-list--radio",
      "root": "ais-refinement-list root cx",
    }
  }
  facetValues={
    Array [
      Object {
        "isRefined": true,
        "label": "All",
        "value": "%7B%7D",
      },
      Object {
        "isRefined": false,
        "label": "less than 4",
        "value": "%7B%22end%22:4%7D",
      },
      Object {
        "isRefined": false,
        "label": "4",
        "value": "%7B%22start%22:4,%22end%22:4%7D",
      },
      Object {
        "isRefined": false,
        "label": "between 5 and 10",
        "value": "%7B%22start%22:5,%22end%22:10%7D",
      },
      Object {
        "isRefined": false,
        "label": "more than 10",
        "value": "%7B%22start%22:10%7D",
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"radio\\" class=\\"{{cssClasses.radio}}\\" name=\\"{{attributeName}}\\" {{#isRefined}}checked{{/isRefined}} />{{label}}
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleRefinement={[Function]}
/>
`;

exports[`numericRefinementList() renders with transformed items 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-refinement-list--item__active",
      "body": "ais-refinement-list--body",
      "footer": "ais-refinement-list--footer",
      "header": "ais-refinement-list--header",
      "item": "ais-refinement-list--item",
      "label": "ais-refinement-list--label",
      "list": "ais-refinement-list--list",
      "radio": "ais-refinement-list--radio",
      "root": "ais-refinement-list",
    }
  }
  facetValues={
    Array [
      Object {
        "isRefined": true,
        "label": "All",
        "transformed": true,
        "value": "%7B%7D",
      },
      Object {
        "isRefined": false,
        "label": "less than 4",
        "transformed": true,
        "value": "%7B%22end%22:4%7D",
      },
      Object {
        "isRefined": false,
        "label": "4",
        "transformed": true,
        "value": "%7B%22start%22:4,%22end%22:4%7D",
      },
      Object {
        "isRefined": false,
        "label": "between 5 and 10",
        "transformed": true,
        "value": "%7B%22start%22:5,%22end%22:10%7D",
      },
      Object {
        "isRefined": false,
        "label": "more than 10",
        "transformed": true,
        "value": "%7B%22start%22:10%7D",
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"radio\\" class=\\"{{cssClasses.radio}}\\" name=\\"{{attributeName}}\\" {{#isRefined}}checked{{/isRefined}} />{{label}}
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleRefinement={[Function]}
/>
`;
